--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.vitor</groupId>
 	<artifactId>junta-pdf</artifactId>
-	<version>0.0.2-SNAPSHOT</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<name>junta-pdf</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -34,11 +34,14 @@
 
 
 		<!-- Dependência do iText -->
+		<!-- https://mvnrepository.com/artifact/com.itextpdf/itext7-core -->
 		<dependency>
 			<groupId>com.itextpdf</groupId>
 			<artifactId>itext7-core</artifactId>
-			<version>7.1.15</version>
+			<version>8.0.4</version>
+			<type>pom</type>
 		</dependency>
+
 	</dependencies>
 
 	<build>
